--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-
+<section>
+    <!--    about me section -->
+    <img src="assets/lucia-profile-picture.png" alt="Lucia Velasco">
+    <!-- Semantic h tags -->
+    <div>
+        <h1>Lucia Velasco</h1>
+        <h2>Frontend Developer</h2>
+        <p>All my hobbies, hopes and dreams go here</p>
+        <div>
+            <i>LinkedIn</i>
+            <i>Github</i>
+            <i>Email</i>
+        </div>
+    </div>
+    <p>this site was written in Tailwind, HTML5, and CSS3</p>
+</section>
+<section>
+    <!--    project one: left -->
+    <div>
+        <h3>Title</h3>
+        <p>Description</p>
+        <div>
+            <img src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">
+            <div>
+                <!-- icons -->
+                <div>
+                    <i>Github</i>
+                    <i>Codepen</i>
+                </div>
+                <div>
+                    <!-- todo: hide on mobile -->
+                    <i>Tailwind</i>
+                    <i>HTML</i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>01</div>
+</section>
 </body>
 </html>
