--- a/index.html
+++ b/index.html
@@ -24,29 +24,31 @@
         </div>
         <p>this site was written in Tailwind, HTML5, and CSS3</p>
     </section>
-    <!--<section>-->
-    <!--    &lt;!&ndash;    project one: left &ndash;&gt;-->
-    <!--    <div>-->
-    <!--        <h3>Title</h3>-->
-    <!--        <p>Description</p>-->
-    <!--        <div>-->
-    <!--            <img src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">-->
-    <!--            <div>-->
-    <!--                &lt;!&ndash; icons &ndash;&gt;-->
-    <!--                <div>-->
-    <!--                    <i>Github</i>-->
-    <!--                    <i>Codepen</i>-->
-    <!--                </div>-->
-    <!--                <div>-->
-    <!--                    &lt;!&ndash; todo: hide on mobile &ndash;&gt;-->
-    <!--                    <i>Tailwind</i>-->
-    <!--                    <i>HTML</i>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
-    <!--    <div>01</div>-->
-    <!--</section>-->
+    <section class="my-20 flex">
+        <!--    project one: left -->
+        <div class="h-44 w-2/3 p-10 bg-gray-500">
+            <div class="h-44">
+                <h3>Title</h3>
+                <p>Description</p>
+            </div>
+            <div>
+                <img class="w-60" src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">
+                <div>
+                    <!-- icons -->
+                    <div>
+                        <i>Github</i>
+                        <i>Codepen</i>
+                    </div>
+                    <div>
+                        <!-- todo: hide on mobile -->
+                        <i>Tailwind</i>
+                        <i>HTML</i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="h-44 w-1/3 text-gray-400 text-9xl text-center align-middle">01</div>
+    </section>
 </main>
 </body>
 </html>
