--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Lucia Velasco | Frontend Developer</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script defer src="index.js" type="application/javascript"></script>
 </head>
 <body>
 <main class="flex flex-col text-yellow-300 bg-yellow-300 min-h-screen py-20">
@@ -24,10 +25,10 @@
         </div>
         <p>this site was written in Tailwind, HTML5, and CSS3</p>
     </section>
-    <section class="my-20 flex">
+    <section class="project-section my-20 flex">
         <!--    project one: left -->
-        <div class="h-44 w-2/3 p-10 bg-gray-500">
-            <div class="h-44">
+        <div class="project-description transition-all h-32 overflow-hidden w-2/3 p-10 bg-gray-500">
+            <div class="h-32">
                 <h3>Title</h3>
                 <p>Description</p>
             </div>
@@ -47,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div class="h-44 w-1/3 text-gray-400 text-9xl text-center align-middle">01</div>
+        <div class="h-32 w-1/3 text-gray-400 text-9xl text-center align-middle">01</div>
     </section>
 </main>
 </body>
