--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Lucia Velasco | Frontend Developer</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <script defer src="index.js" type="application/javascript"></script>
+    <script src="https://kit.fontawesome.com/da4751f997.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <main class="flex flex-col text-yellow-300 bg-yellow-300 min-h-screen py-20">
@@ -27,28 +27,27 @@
     </section>
     <section class="project-section my-20 flex">
         <!--    project one: left -->
-        <div class="project-description transition-all h-32 overflow-hidden w-2/3 p-10 bg-gray-500">
-            <div class="h-32">
-                <h3>Title</h3>
-                <p>Description</p>
-            </div>
-            <div>
-                <img class="w-60" src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">
-                <div>
-                    <!-- icons -->
-                    <div>
-                        <i>Github</i>
-                        <i>Codepen</i>
-                    </div>
-                    <div>
-                        <!-- todo: hide on mobile -->
-                        <i>Tailwind</i>
-                        <i>HTML</i>
-                    </div>
+        <div class="w-2/3 p-10 bg-gray-500">
+            <div class="flex justify-between">
+                <div class="h-32">
+                    <h3>Title</h3>
+                    <p>Description</p>
+                </div>
+                <div class="text-5xl grid grid-cols-2">
+                    <a href="#" class="col-span-2"><i class="fab fa-github"></i></a>
+                    <a href="#">
+                        <svg class="h-12 w-14">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                  d="M25.517 0C18.712 0 14.46 3.382 12.758 10.146c2.552-3.382 5.529-4.65 8.931-3.805 1.941.482 3.329 1.882 4.864 3.432 2.502 2.524 5.398 5.445 11.722 5.445 6.804 0 11.057-3.382 12.758-10.145-2.551 3.382-5.528 4.65-8.93 3.804-1.942-.482-3.33-1.882-4.865-3.431C34.736 2.92 31.841 0 25.517 0zM12.758 15.218C5.954 15.218 1.701 18.6 0 25.364c2.552-3.382 5.529-4.65 8.93-3.805 1.942.482 3.33 1.882 4.865 3.432 2.502 2.524 5.397 5.445 11.722 5.445 6.804 0 11.057-3.381 12.758-10.145-2.552 3.382-5.529 4.65-8.931 3.805-1.941-.483-3.329-1.883-4.864-3.432-2.502-2.524-5.398-5.446-11.722-5.446z"
+                                  fill="#06B6D4"></path>
+                        </svg>
+                    </a>
+                    <i class="fab fa-html5"></i>
                 </div>
             </div>
+            <img src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">
         </div>
-        <div class="h-32 w-1/3 text-gray-400 text-9xl text-center align-middle">01</div>
+        <div class="w-1/3 text-gray-400 text-9xl text-center">01</div>
     </section>
 </main>
 </body>
