Replace placeholders with icons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h2>Frontend Developer</h2>
             <p>All my hobbies, hopes and dreams go here</p>
             <div>
-                <i>LinkedIn</i>
-                <i>Github</i>
-                <i>Email</i>
+                <a href="#"><i class="fab text-5xl fa-linkedin"></i></a>
+                <a href="#"><i class="fab text-5xl fa-github"></i></a>
+                <a href="#"><i class="fas text-5xl fa-envelope"></i></a>
             </div>
         </div>
         <p>this site was written in Tailwind, HTML5, and CSS3</p>
