Styling of personal description and refactor layout

--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
 </head>
 <body>
 <main class="flex flex-col text-yellow-300 bg-yellow-300 min-h-screen py-20">
-    <section class="w-2/3 h-96 relative justify-between flex flex-col self-end bg-gray-500 p-10">
+
+    <section class="w-2/3 justify-between flex flex-col self-end bg-gray-500 p-10">
         <!--    about me section -->
-        <img class="w-60 absolute top-10 -left-32" src="assets/lucia-profile-picture.png" alt="Lucia Velasco">
         <!-- Semantic h tags -->
-        <div class="w-4/5 self-end mt-10">
-            <h1>Lucia Velasco</h1>
-            <h2>Frontend Developer</h2>
-            <p>All my hobbies, hopes and dreams go here</p>
-            <div>
-                <a href="#"><i class="fab text-5xl fa-linkedin"></i></a>
-                <a href="#"><i class="fab text-5xl fa-github"></i></a>
-                <a href="#"><i class="fas text-5xl fa-envelope"></i></a>
+        <h1 class="text-5xl my-2">Lucia Velasco</h1>
+        <h2 class="text-2xl mb-8">Frontend Developer</h2>
+        <div class="w-4/5 h-3/5 text-lg relative self-end border-yellow-500 border-t-8 border-b-8 border-r-8 mb-5 p-5">
+            <img class="h-full absolute -top-2 right-full box-content border-yellow-500 border-8" src="assets/00100sPORTRAIT_00100_BURST20191212175921416_COVER.jpg" alt="Lucia Velasco">
+            <p class="mb-5">Hi, I'm Lucia! I started coding about a year ago during a summer internship, and I
+                loved it so much I enrolled onto a bootcamp.</p>
+            <p class="mb-5">I'm now looking to join a company as a frontend developer where I can keep expanding
+                my skills and contribute to a product as part of a team. I want to work with cutting edge technology and
+                learn the latest best practice in an environment that will challenge me to keep improving myself.</p>
+            <p class="mb-5">On my course I learned the fundamentals of HTML, CSS, and JavaScript, and built up
+                the skills needed to be a modern frontend developer; from responsive design, to accessibility, to CSS
+                libraries and JavaScript frameworks.</p>
+            <p>In my spare time I like watching Netflix, playing Dungeons and Dragons, writing fantasy
+                stories, travelling, and eating new foods.</p>
+        </div>
+        <div class="w-4/5">
+            <div class="text-5xl">
+                <!-- contact links -->
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <p>this site was written in Tailwind, HTML5, and CSS3</p>
