Add link to repo in project (lol recursion)

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
-        <p>this site was written in Tailwind, HTML5, and CSS3</p>
+        <p class="mt-5 text-sm"><a href="https://github.com/luciavelasco/example-portfolio">this site was written in Tailwind and HTML5 <i class="fab fa-github"></i></a></p>
     </section>
+
+
     <section class="project-section my-20 flex">
         <!--    project one: left -->
         <div class="w-2/3 p-10 bg-gray-500">
