--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <section class="w-2/3 justify-between flex flex-col self-end bg-gray-500 p-10">
         <!--    about me section -->
         <!-- Semantic h tags -->
-        <h1 class="text-5xl my-2">Lucia Velasco</h1>
+        <h1 class="text-5xl my-2">Lucia</h1>
         <h2 class="text-2xl mb-8">Frontend Developer</h2>
         <div class="w-4/5 h-3/5 text-lg relative self-end border-yellow-500 border-t-8 border-b-8 border-r-8 mb-5 p-5">
-            <img class="h-full absolute -top-2 right-full box-content border-yellow-500 border-8" src="assets/00100sPORTRAIT_00100_BURST20191212175921416_COVER.jpg" alt="Lucia Velasco">
+            <img class="h-full absolute -top-2 right-full box-content border-yellow-500 border-8"
+                 src="assets/00100sPORTRAIT_00100_BURST20191212175921416_COVER.jpg" alt="Lucia Velasco">
             <p class="mb-5">Hi, I'm Lucia! I started coding about a year ago during a summer internship, and I
                 loved it so much I enrolled onto a bootcamp.</p>
             <p class="mb-5">I'm now looking to join a company as a frontend developer where I can keep expanding
@@ -36,33 +37,57 @@
                 <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
-        <p class="mt-5 text-sm"><a href="https://github.com/luciavelasco/example-portfolio">this site was written in Tailwind and HTML5 <i class="fab fa-github"></i></a></p>
+        <p class="mt-5 text-sm"><a href="https://github.com/luciavelasco/example-portfolio">this site was written in
+            Tailwind and HTML5 <i class="fab fa-github"></i></a></p>
     </section>
 
 
-    <section class="project-section my-20 flex">
+    <section class="my-20 flex">
         <!--    project one: left -->
-        <div class="w-2/3 p-10 bg-gray-500">
-            <div class="flex justify-between">
-                <div class="h-32">
-                    <h3>Title</h3>
-                    <p>Description</p>
+        <div class="w-2/3 p-10 bg-gray-500 border-yellow-500 border-l-8">
+            <h3 class="text-5xl my-2">Time Tracking App <a href="https://github.com/luciavelasco/fe-mentor-time-dash"><i
+                    class="fab fa-github hover:text-yellow-500"></i></a></h3>
+            <div class="flex justify-between mb-10">
+                <div>
+                    <p>This dashboard is a responsive website displaying test data.</p>
+                    <p>Deets: Tailwind. Mobile-first design. Semantic UI.</p>
                 </div>
-                <div class="text-5xl grid grid-cols-2">
-                    <a href="#" class="col-span-2"><i class="fab fa-github"></i></a>
-                    <a href="#">
-                        <svg class="h-12 w-14">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                  d="M25.517 0C18.712 0 14.46 3.382 12.758 10.146c2.552-3.382 5.529-4.65 8.931-3.805 1.941.482 3.329 1.882 4.864 3.432 2.502 2.524 5.398 5.445 11.722 5.445 6.804 0 11.057-3.382 12.758-10.145-2.551 3.382-5.528 4.65-8.93 3.804-1.942-.482-3.33-1.882-4.865-3.431C34.736 2.92 31.841 0 25.517 0zM12.758 15.218C5.954 15.218 1.701 18.6 0 25.364c2.552-3.382 5.529-4.65 8.93-3.805 1.942.482 3.33 1.882 4.865 3.432 2.502 2.524 5.397 5.445 11.722 5.445 6.804 0 11.057-3.381 12.758-10.145-2.552 3.382-5.529 4.65-8.931 3.805-1.941-.483-3.329-1.883-4.864-3.432-2.502-2.524-5.398-5.446-11.722-5.446z"
-                                  fill="#06B6D4"></path>
-                        </svg>
-                    </a>
+                <div class="text-5xl flex">
+                    <svg class="h-12 w-14 text-yellow-500">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                              d="M25.517 0C18.712 0 14.46 3.382 12.758 10.146c2.552-3.382 5.529-4.65 8.931-3.805 1.941.482 3.329 1.882 4.864 3.432 2.502 2.524 5.398 5.445 11.722 5.445 6.804 0 11.057-3.382 12.758-10.145-2.551 3.382-5.528 4.65-8.93 3.804-1.942-.482-3.33-1.882-4.865-3.431C34.736 2.92 31.841 0 25.517 0zM12.758 15.218C5.954 15.218 1.701 18.6 0 25.364c2.552-3.382 5.529-4.65 8.93-3.805 1.942.482 3.33 1.882 4.865 3.432 2.502 2.524 5.397 5.445 11.722 5.445 6.804 0 11.057-3.381 12.758-10.145-2.552 3.382-5.529 4.65-8.931 3.805-1.941-.483-3.329-1.883-4.864-3.432-2.502-2.524-5.398-5.446-11.722-5.446z"
+                              fill="rgb(252, 211, 77)"></path>
+                    </svg>
                     <i class="fab fa-html5"></i>
                 </div>
             </div>
             <img src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">
         </div>
         <div class="w-1/3 text-gray-400 text-9xl text-center">01</div>
+    </section>
+
+
+    <section class="my-20 flex">
+        <!--    project two: right -->
+        <div class="w-1/3 text-gray-400 text-9xl text-center">02</div>
+        <div class="w-2/3 p-10 bg-gray-500 border-yellow-500 border-r-8">
+            <h3 class="text-5xl my-2"><a href="https://codepen.io/luciavelasco/pen/MWvderQ?editors=1100"><i
+                    class="fab fa-codepen hover:text-yellow-500"></i></a> Navbar Challenge (Flex + Media queries)</h3>
+            <div class="flex justify-between mb-10">
+                <div>
+                    <p>This was my first challenge using flex and media queries.</p>
+                    <p>It was rewarding to see the layout come together on mobile!</p>
+                </div>
+                <div class="text-5xl flex">
+                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-css3"></i>
+                </div>
+            </div>
+            <p>Desktop:</p>
+            <img src="assets/Screenshot%202021-11-22%20at%2021.11.07.png" alt="navbar desktop view">
+            <p>Mobile:</p>
+            <img src="assets/Screenshot%202021-11-22%20at%2021.14.28.png" alt="navbar mobile view">
+        </div>
     </section>
 </main>
 </body>
