--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/da4751f997.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<main class="flex flex-col text-yellow-300 bg-yellow-300 min-h-screen py-20">
+<main class="flex flex-col text-yellow-300 bg-yellow-300 min-h-screen pt-20">
 
     <section class="w-11/12 sm:w-2/3 justify-between flex flex-col self-end bg-gray-500 p-10">
         <!--    about me section -->
@@ -19,16 +19,19 @@
             <img class="w-full lg:w-auto lg:h-full lg:absolute -top-2 right-full lg:box-content border-yellow-500 border-8"
                  src="assets/00100sPORTRAIT_00100_BURST20191212175921416_COVER.jpg" alt="Lucia Velasco">
             <div class=" p-5">
-            <p class="mb-5">Hi, I'm Lucia! I started coding about a year ago during a summer internship, and I
-                loved it so much I enrolled onto a bootcamp.</p>
-            <p class="mb-5">I'm now looking to join a company as a frontend developer where I can keep expanding
-                my skills and contribute to a product as part of a team. I want to work with cutting edge technology and
-                learn the latest best practice in an environment that will challenge me to keep improving myself.</p>
-            <p class="mb-5">On my course I learned the fundamentals of HTML, CSS, and JavaScript, and built up
-                the skills needed to be a modern frontend developer; from responsive design, to accessibility, to CSS
-                libraries and JavaScript frameworks.</p>
-            <p>In my spare time I like watching Netflix, playing Dungeons and Dragons, writing fantasy
-                stories, travelling, and eating new foods.</p>
+                <p class="mb-5">Hi, I'm Lucia! I started coding about a year ago during a summer internship, and I
+                    loved it so much I enrolled onto a bootcamp.</p>
+                <p class="mb-5">I'm now looking to join a company as a frontend developer where I can keep expanding
+                    my skills and contribute to a product as part of a team. I want to work with cutting edge technology
+                    and
+                    learn the latest best practice in an environment that will challenge me to keep improving
+                    myself.</p>
+                <p class="mb-5">On my course I learned the fundamentals of HTML, CSS, and JavaScript, and built up
+                    the skills needed to be a modern frontend developer; from responsive design, to accessibility, to
+                    CSS
+                    libraries and JavaScript frameworks.</p>
+                <p>In my spare time I like watching Netflix, playing Dungeons and Dragons, writing fantasy
+                    stories, travelling, and eating new foods.</p>
             </div>
         </div>
         <div class="w-4/5">
@@ -38,7 +41,8 @@
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fas fa-envelope"></i></a>
             </div>
-            <p class="mt-5 text-sm text-center lg:text-left"><a href="https://github.com/luciavelasco/example-portfolio">this site was written in
+            <p class="mt-5 text-sm text-center lg:text-left"><a
+                    href="https://github.com/luciavelasco/example-portfolio">this site was written in
                 Tailwind and HTML5 <i class="fab fa-github"></i></a></p>
         </div>
     </section>
@@ -51,15 +55,8 @@
                     class="fab fa-github hover:text-yellow-500"></i></a></h3>
             <div class="flex justify-between mb-10">
                 <div>
-                    <p>This dashboard is a responsive website displaying test data. Deets: Tailwind. Mobile-first design. Semantic UI.</p>
-                </div>
-                <div class="text-5xl flex hidden md:visible">
-                    <svg class="h-12 w-14 text-yellow-500">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                              d="M25.517 0C18.712 0 14.46 3.382 12.758 10.146c2.552-3.382 5.529-4.65 8.931-3.805 1.941.482 3.329 1.882 4.864 3.432 2.502 2.524 5.398 5.445 11.722 5.445 6.804 0 11.057-3.382 12.758-10.145-2.551 3.382-5.528 4.65-8.93 3.804-1.942-.482-3.33-1.882-4.865-3.431C34.736 2.92 31.841 0 25.517 0zM12.758 15.218C5.954 15.218 1.701 18.6 0 25.364c2.552-3.382 5.529-4.65 8.93-3.805 1.942.482 3.33 1.882 4.865 3.432 2.502 2.524 5.397 5.445 11.722 5.445 6.804 0 11.057-3.381 12.758-10.145-2.552 3.382-5.529 4.65-8.931 3.805-1.941-.483-3.329-1.883-4.864-3.432-2.502-2.524-5.398-5.446-11.722-5.446z"
-                              fill="rgb(252, 211, 77)"></path>
-                    </svg>
-                    <i class="fab fa-html5"></i>
+                    <p>This dashboard is a responsive website displaying test data. Deets: Tailwind. Mobile-first
+                        design. Semantic UI.</p>
                 </div>
             </div>
             <img src="assets/time-tracking-app.png" alt="dashboard for a time tracking website">
@@ -76,17 +73,28 @@
                     class="fab fa-codepen hover:text-yellow-500"></i></a> Navbar Challenge (Flex + Media queries)</h3>
             <div class="flex justify-between mb-10">
                 <div>
-                    <p>This was my first challenge using flex and media queries. It was rewarding to see the layout come together on mobile!</p>
-                </div>
-                <div class="text-5xl flex hidden md:visible">
-                    <i class="fab fa-html5"></i>
-                    <i class="fab fa-css3"></i>
+                    <p>This was my first challenge using flex and media queries. It was rewarding to see the layout come
+                        together on mobile!</p>
                 </div>
             </div>
             <p>Desktop:</p>
             <img src="assets/Screenshot%202021-11-22%20at%2021.11.07.png" alt="navbar desktop view">
             <p>Mobile:</p>
             <img src="assets/Screenshot%202021-11-22%20at%2021.14.28.png" alt="navbar mobile view">
+        </div>
+    </section>
+
+    <section class="text-3xl flex flex-wrap justify-between border-gray-500 border-t-8 border-b-8">
+        <div class="border-yellow-500 w-2/5 md:w-1/3 p-4 bg-gray-500">
+            <h4 class="font-bold text-lg underline my-5">LANGUAGES</h4>
+            <p>HTML5 <i class="fab fa-html5"></i></p>
+            <p>CSS3 <i class="fab fa-css3"></i></p>
+            <p>JavaScript <i class="fab fa-js"></i></p>
+        </div>
+        <div class="border-yellow-500 w-2/5 md:w-1/3 p-4 bg-gray-500">
+            <h4 class="font-bold text-lg underline my-5">TOOLS</h4>
+            <p>React <i class="fab fa-react"></i></p>
+            <p>Tailwind</p>
         </div>
     </section>
 </main>
