--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
                 <p class="mb-5">Hi, I'm Lucia! I started coding about a year ago during a summer internship, and I
                     loved it so much I enrolled onto a bootcamp.</p>
                 <p class="mb-5">I'm now looking to join a company as a frontend developer where I can keep expanding
-                    my skills and contribute to a product as part of a team. I want to work with cutting edge technology
-                    and
-                    learn the latest best practice in an environment that will challenge me to keep improving
-                    myself.</p>
-                <p class="mb-5">On my course I learned the fundamentals of HTML, CSS, and JavaScript, and built up
-                    the skills needed to be a modern frontend developer; from responsive design, to accessibility, to
-                    CSS
-                    libraries and JavaScript frameworks.</p>
+                    my skills and work with cutting edge technology. I want to contribute to a product as part of a team
+                    that will always challenge me to keep improving both my soft skills and my technical skills.</p>
+                <p class="mb-5">I particularly want to do more work with JavaScript. On my course I learned the
+                    fundamentals of HTML, CSS, and JavaScript, and built up the skills needed to be a modern frontend
+                    developer; from responsive design, to accessibility, to CSS libraries and JavaScript frameworks.</p>
                 <p>In my spare time I like watching Netflix, playing Dungeons and Dragons, writing fantasy
                     stories, travelling, and eating new foods.</p>
             </div>
@@ -37,9 +34,9 @@
         <div class="w-4/5">
             <div class="text-5xl text-center lg:text-left">
                 <!-- contact links -->
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fas fa-envelope"></i></a>
+                <a href="#"><i class="fab fa-linkedin hover:text-yellow-500"></i></a>
+                <a href="#"><i class="fab fa-github hover:text-yellow-500"></i></a>
+                <a href="#"><i class="fas fa-envelope hover:text-yellow-500"></i></a>
             </div>
             <p class="mt-5 text-sm text-center lg:text-left"><a
                     href="https://github.com/luciavelasco/example-portfolio">this site was written in
