Add React to list of technologies

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     my skills and work with cutting edge technology. I want to contribute to a product as part of a team
                     that will always challenge me to keep improving both my soft skills and my technical skills.</p>
                 <p class="mb-5">I particularly want to do more work with JavaScript. On my course I learned the
-                    fundamentals of HTML, CSS, and JavaScript, and built up the skills needed to be a modern frontend
+                    fundamentals of HTML, CSS, JavaScript, and React, and built up the skills needed to be a modern frontend
                     developer; from responsive design, to accessibility, to CSS libraries and JavaScript frameworks.</p>
                 <p>In my spare time I like watching Netflix, playing Dungeons and Dragons, writing fantasy
                     stories, travelling, and eating new foods.</p>
