--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <section class="my-20 flex flex-col-reverse md:flex-row">
         <!--    project one: left -->
         <div class="w-11/12 md:w-2/3 p-10 bg-gray-500 border-yellow-500 border-l-8 border-r-8">
-            <h3 class="text-5xl my-2">Time Tracking App <a href="https://github.com/luciavelasco/fe-mentor-time-dash"><i
-                    class="fab fa-github hover:text-yellow-500"></i></a></h3>
+            <a class="hover:text-yellow-500" href="https://github.com/luciavelasco/fe-mentor-time-dash"><h3 class="text-5xl my-2">Time Tracking App <i
+                    class="fab fa-github"></i></h3></a>
             <div class="flex justify-between mb-10">
                 <div>
                     <p>This dashboard is a responsive website displaying test data. Deets: Tailwind. Mobile-first
@@ -66,8 +66,8 @@
         <!--    project two: right -->
         <div class="w-full md:w-1/3 text-gray-400 text-9xl text-center">02</div>
         <div class="w-11/12 md:w-2/3 p-10 bg-gray-500 border-yellow-500 border-r-8 border-l-8">
-            <h3 class="text-5xl my-2"><a href="https://codepen.io/luciavelasco/pen/MWvderQ?editors=1100"><i
-                    class="fab fa-codepen hover:text-yellow-500"></i></a> Navbar Challenge (Flex + Media queries)</h3>
+            <a class="hover:text-yellow-500" href="https://codepen.io/luciavelasco/pen/MWvderQ?editors=1100"><h3 class="text-5xl my-2"><i
+                    class="fab fa-codepen"></i> Navbar Challenge (Flex + Media queries)</h3></a>
             <div class="flex justify-between mb-10">
                 <div>
                     <p>This was my first challenge using flex and media queries. It was rewarding to see the layout come
